src/modules/simple-dropdown.module/module.css
/* Menu */

.top-menu  ul {
  list-style: none;
}

.top-menu--desktop {
  display: block;
}

.top-menu--mobile {
  display: none;
}

@media (max-width: 767px) {
  .top-menu--desktop {
    display: none;
  }

  .top-menu--mobile {
    display: block;
  }
}

/* Menu Items */

.top-menu__item {
  position: relative;
}

.top-menu__link {
  font-size: 14px;
  line-height: 24px;
  text-decoration: none;
}

.top-menu__link:hover,
.top-menu__link:focus,
.top-menu__link:active {
  text-decoration: none;
}

@media (max-width: 767px) {
  .top-menu__item {
    display: block;
    width: 100%;
  }

}

/* Menu items - top level */

.top-menu__item--depth-1 {
  padding: 0.25rem 1rem;
  transition: all 0.3s ease-in-out;
}



.top-menu__item--depth-1:hover,
.top-menu__item--depth-1:focus {
  cursor: pointer;
}

.top-menu__item--depth-1 .top-menu__link {
  padding: 0.6rem;
}

.top-menu__child-toggle {
  transform: translate(-35%, 20%);
}

.top-menu__child-toggle-icon {
  transition: all 0.3s ease-in-out;
}

.top-menu__item--open .top-menu__child-toggle > .top-menu__child-toggle-icon {
  transform: rotate(180deg);
}

@media screen and (max-width: 767px) {
  .top-menu__item--depth-1 {
    border-right: none !important;
    border-bottom: 1px solid #DFE4E9;  
    padding: 0.75rem 0;
    transition: all 0.2s ease;
  }

  .top-menu__item.top-menu__item--has-submenu {
    align-items: center;
    display: flex;
    justify-content: space-between;
    padding: 0.5rem 0.25rem 0.5rem 0;
  }

  .top-menu__item--depth-1 .top-menu__link {
    color: #777E89;
    font-size: 16px;
    padding: 0.5rem;
  }

  .top-menu__child-toggle {
    transform: unset;
  }
}

/* Submenus */

.top-menu__submenu {
  align-items: center;
  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.15);
  border-radius: 5px;
  display: none;
  flex-direction: column;
  height: 0.2px;
  left: 2%;
  opacity: 0;
  position: absolute;
  padding: 0;
  text-transform: none;
  top: -200%;
  transition: all 0.3s ease-in-out;
  width: 97%;
  z-index: 99;
}

.top-menu__item--open {
  transition: all 0.3s ease-in-out;
}

.top-menu__item--open > .top-menu__submenu {
  display: flex;
  height: fit-content;
  opacity: 1;
  top: 100%;
  transition: all 0.3s ease-in-out;
  z-index: 999;
}

.top-menu__submenu--level-2 {
  transform: translateY(5%);
  transition: all 0.3s ease-in-out;
}

.top-menu__item--depth-1:first-child .top-menu__submenu--level-2 {
  transform: unset;
}

.top-menu__item--depth-2 {
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
  padding: 0;
  text-align: center;
  width: 95%;
}

.top-menu__item--depth-2:last-child {
  border: none;
}

.top-menu__submenu .top-menu__link {
  align-items: center;
  display: inline-flex;
  gap: 0.5rem;
  padding: 0.75rem;
  transition: opacity 0.2s ease;
  width: 100%;
}

.top-menu__item--depth-2:nth-child(n) .top-menu__link::before {
  content: '';
  display: block;
  height: 32px;
  transition: opacity 0.2s ease;
  width: 32px;
}

@media screen and (max-width: 767px) {
  .top-menu__item--depth-1.top-menu__item--open {
    border-bottom: none;
  }

  .top-menu .top-menu__submenu {
    background-color: #FFF;
    border: none;
    border-bottom: 1px solid #DFE4E9;
    border-radius: 0;
    box-shadow: none;
    padding: 0 0.75rem;
    transform: translateX(-10px);
    width: 100%;
    z-index: 10;
  }

  .top-menu__item--open > .top-menu__submenu {
    z-index: 10;
  }

  .top-menu__item--depth-2 {
    border-bottom: none;
    padding-left: 0;
    transition: all 0.2s ease;
    width: 100%;
  }

  .top-menu__submenu .top-menu__link {
    /* #0f1e2d at 60% opacity */
    color: rgba(15, 30, 45, 0.6);
    padding: 2px 4px 8px 0;
  }
}

/* Triangle for the dropdown menu */

@media (min-width: 768px) {
  .top-menu__submenu--level-2::before {
    border-right: none;
    border-top: none;
    border-radius: 1px;
    box-shadow: 0 4px 10px 0 rgba(0 0 0 / 0.15);
    content: '';
    display: block;
    height: 14px;
    left: 27%;
    overflow: hidden;
    position: absolute;
    top: -3%;
    transform: rotate(45deg);
    transition: all 0.3s ease-in-out;
    width: 14px;
  }
}

